# PRIMORDIA

./: .gitignore  RUN.md
backend/: main.py  pyproject.toml  requirements.txt
backend/data/: __init__.py  mock_data.py
backend/models/: __init__.py  explanations.py  signals.py
backend/services/: __init__.py  analysis.py  chat.py  geospatial.py  market.py  news.py  satellite.py  sentiment.py
backend/simulator/: __init__.py  config.py  engine.py  headlines.py
backend/src/: __init__.py  main.py
frontend/: .env.local.example  package.json  tailwind.config.js
frontend/public/: manifest.json  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/signals/: layout.tsx  page.tsx
frontend/src/components/: AgentExplanations.tsx  AgentInsights.tsx  AlertsList.tsx  AnalysisPanel.tsx  ChatBox.tsx  CountUp.tsx  DivergenceChart.tsx  EntryMotion.tsx  HeadlinesPanel.tsx  Map.tsx  MarketSymbols.tsx  RegionSelector.tsx  RegisterSW.tsx  RiskSignals.tsx  ScoresPanel.tsx  SignalChart.tsx  SignalMeter.tsx  SimulationState.tsx  TradingViewChart.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
